# ags-cs-tree-sitter

./: .gitmodules  CMakeLists.txt  README.md  api.i  azure-pipelines.yml  generate_swig_binds.sh  parser.c.patch  parser.h  parser.i
include/tree-sitter/: langs.h
